# SimpleGameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gen_vs2022.bat  install_vcpkg_packages.bat  renderDoc.cap  sge.code-workspace  vs-chromium-project.txt
src/: sge_common.cmake  (+2 more)
src/books/Hands-On C++ Game Animation Programming/test/: CMakeLists.txt
src/books/Hands-On C++ Game Animation Programming/test/src/: sge_game_anime_prog_test-pch.h  sge_game_anime_prog_test.cpp
src/books/Hands-On C++ Game Animation Programming/test/src/math/: test_dual_qual.cpp  test_mat4.cpp  test_qual.cpp
src/books/Learn OpenGL - Joey de Vries/examples/sge_learnopengl_example_003/: CMakeLists.txt
src/books/Learn OpenGL - Joey de Vries/examples/sge_learnopengl_example_003/src/: sge_learnopengl_example_003.cpp
src/books/Programming Windows 5th - Charles Petzold/app/: CMakeLists.txt
src/books/Programming Windows 5th - Charles Petzold/app/src/: sge_prog_win5_app-pch.h  sge_prog_win5_app.cpp
src/render/shader_compiler/: CMakeLists.txt
src/render/shader_compiler/src/: Lexer.cpp  ShaderCompiler.cpp  ShaderCompiler.h  ShaderCompiler_DX11.cpp  ShaderCompiler_DX11.h  ShaderCompiler_GL.cpp  ShaderCompiler_GL.h  ShaderCompiler_GL3.cpp  ShaderCompiler_GL3.h  ShaderParser.cpp  ShaderParser.h  main.cpp  sge_shader_compiler-pch.h  sge_shader_compiler.cpp
src/render/shader_compiler/src/sge_shader_compiler/: Lexer.cpp  Lexer.h  ShaderParser.cpp  ShaderParser.h
src/tutorials/NeHe OpenGL/: CMakeLists.txt
src/tutorials/NeHe OpenGL/src/: NeHeOGL_Common.cpp  NeHeOGL_Common.h  NeHeOGL_EditMesh.cpp  NeHeOGL_EditMesh.h  NeHeOGL_GL_Common.h  NeHeOGL_Image.cpp  NeHeOGL_Image.h  NeHeOGL_ImageIO_bmp.cpp  NeHeOGL_ImageIO_bmp.h  NeHeOGL_ImageIO_png.cpp  NeHeOGL_ImageIO_png.h  NeHeOGL_Mesh.cpp  NeHeOGL_Mesh.h  NeHeOGL_NativeUI.h  NeHeOGL_NativeUIWindow_Win32.cpp  NeHeOGL_NativeUIWindow_Win32.h  NeHeOGL_RenderDataType.h  NeHeOGL_RenderState.h  NeHeOGL_Texture2D.cpp  NeHeOGL_Texture2D.h  NeHeOGL_Vertex.h  NeHeOGL_WavefrontObjLoader.cpp  NeHeOGL_WavefrontObjLoader.h  NeheOGL_Common.cpp  NeheOGL_Common.h  NeheOGL_NativeUI.h  NeheOGL_NativeUIWindow_Win32.cpp  NeheOGL_NativeUIWindow_Win32.h  sge_nehe_ogl.cpp
src/tutorials/NeHe OpenGL/src/NeHeOGL 001/: NeHeOGL_Lesson001.cpp
src/tutorials/NeHe OpenGL/src/NeHeOGL 002/: NeHeOGL_Lesson002.cpp  NeHeOGL_Lesson002.h
src/tutorials/NeHe OpenGL/src/NeHeOGL 004/: NeHeOGL_Lesson004.cpp  NeHeOGL_Lesson004.h
src/tutorials/NeHe OpenGL/src/NeHeOGL 005/: NeHeOGL_Lesson005.cpp  NeHeOGL_Lesson005.h
src/tutorials/NeHe OpenGL/src/NeHeOGL 006/: NeHeOGL_Lesson006.cpp  NeHeOGL_Lesson006.h
src/tutorials/NeHe OpenGL/src/NeHeOGL 007/: NeHeOGL_Lesson007.cpp  NeHeOGL_Lesson007.h
src/tutorials/NeHe OpenGL/src/NeHeOGL 008/: NeHeOGL_Lesson008.cpp  NeHeOGL_Lesson008.h
src/tutorials/NeHe OpenGL/src/NeHeOGL 009/: NeHeOGL_Lesson009.cpp  NeHeOGL_Lesson009.h  NeHeOGL_Lesson009_NativeUIWindow.cpp  NeHeOGL_Lesson009_NativeUIWindow.h
src/tutorials/NeHe OpenGL/src/NeHeOGL 010/: NeHeOGL_Lesson010.cpp  NeHeOGL_Lesson010.h
src/tutorials/NeHe OpenGL/src/NeHeOGL 011/: NeHeOGL_Lesson011.cpp  NeHeOGL_Lesson011.h
src/tutorials/NeHe OpenGL/src/NeHeOGL 012/: NeHeOGL_Lesson012.cpp  NeHeOGL_Lesson012.h
src/tutorials/NeHe OpenGL/src/NeheOGL 001/: NeheOGL_Lesson001.cpp  NeheOGL_Lesson001.h
src/tutorials/NeHe OpenGL/src/NeheOGL 002/: NeheOGL_Lesson002.cpp  NeheOGL_Lesson002.h
src/tutorials/NeHe OpenGL/src/NeheOGL 003/: NeheOGL_Lesson003.cpp  NeheOGL_Lesson003.h
src/tutorials/NeHe OpenGL/src/NeheOGL 004/: NeheOGL_Lesson004.cpp  NeheOGL_Lesson004.h
src/tutorials/NeHe OpenGL/src/NeheOGL 005/: NeheOGL_Lesson005.cpp  NeheOGL_Lesson005.h
src/tutorials/NeHe OpenGL/src/NeheOGL 006/: NeheOGL_Lesson006.cpp  NeheOGL_Lesson006.h
src/tutorials/NeHe OpenGL/src/NeheOGL 007/: NeheOGL_Lesson007.cpp  NeheOGL_Lesson007.h
src/tutorials/SiTa Advance OpenGL/: CMakeLists.txt
src/tutorials/SiTa Advance OpenGL/examples/SiTa Advance OpenGL 001/: CMakeLists.txt
src/tutorials/SiTa Advance OpenGL/examples/SiTa Advance OpenGL 001/src/: sge_sita_advance_opengl_001.cpp
src/tutorials/SiTa Advance OpenGL/examples/SiTa Advance OpenGL 002/: CMakeLists.txt
src/tutorials/SiTa Advance OpenGL/examples/SiTa Advance OpenGL 002/src/: sge_sita_advance_opengl_002-pch.h  sge_sita_advance_opengl_002.cpp
src/tutorials/SiTa Advance OpenGL/examples/SiTa Advance OpenGL 003/: CMakeLists.txt
src/tutorials/SiTa Advance OpenGL/examples/SiTa Advance OpenGL 004/: CMakeLists.txt
src/tutorials/SiTa Advance OpenGL/src/: MyCommon.h  sge_sita_advance_opengl.h
src/tutorials/SiTa Advance OpenGL/src/imgui/: MyImGuiApp.cpp  MyImGuiApp.h  MyImGuiWindow.cpp  MyImGuiWindow.h  MyImGui_Common.h  my_imgui.h
src/tutorials/SiTa Advance OpenGL/src/native_ui/: MyOpenGLNativeUIWindow_Base.cpp  MyOpenGLNativeUIWindow_Base.h  MyOpenGLNativeUIWindow_Win32.cpp  MyOpenGLNativeUIWindow_Win32.h  my_nativeui.h
src/tutorials/SiTa Advance OpenGL/src/render/: MyEditMesh.cpp  MyEditMesh.h  MyRenderMesh.cpp  MyRenderMesh.h  MyRender_Common.h  MyShader.cpp  MyShader.h  MyTexture2D.cpp  MyTexture2D.h  MyVertex.h  MyWavefrontObjLoader.cpp  MyWavefrontObjLoader.h  my_render.h
src/tutorials/SiTa DataBase/: CMakeLists.txt
src/tutorials/SiTa DataBase/examples/sge_sita_db_example_001/: CMakeLists.txt
src/tutorials/SiTa DataBase/src/sge_sita_db/: MyDB.h  MyDB_MySQL.cpp  MyDB_SQLite3.cpp  MySQL_Conn.cpp
src/tutorials/SiTa Database/examples/sge_sita_db_example_001/: CMakeLists.txt
src/tutorials/SiTa Localization/: CMakeLists.txt
src/tutorials/SiTa Localization/examples/sge_sita_locale_example_001/: CMakeLists.txt
src/tutorials/SiTa Localization/src/: sge_sita_locale-pch.h  sge_sita_locale.h
src/tutorials/SiTa Localization/src/sge_sita_locale/: Utf.cpp  Utf.h
src/tutorials/SiTa Localization/test/: CMakeLists.txt
src/tutorials/SiTa Localization/test/src/: sge_sita_locale_test.cpp  test_Utf.cpp
src/tutorials/SiTa Ray-Tracing/test/: CMakeLists.txt
src/tutorials/SiTa Ray-Tracing/test/src/: sge_sita_ray_tracer_test.cpp  test_Ray.cpp
(+763 files in other folders)
